--- a/mainPlate.html
+++ b/mainPlate.html
@@ -5,7 +5,9 @@
 <title>Plate's off</title>
 </head>
 <body>
-<h1>This will be the second header</h1>
+<h1>Food Trivia</h1>
+<p class='p1'>Different foods and their respective countries's little trivia</p>
+
 </body>
 
 </html>
