Changed cssto test it a bit

--- a/mainPlate.html
+++ b/mainPlate.html
@@ -5,8 +5,8 @@
 <title>Plate's off</title>
 </head>
 <body>
-<h1>Food Trivia</h1>
-<p class='p1'>Different foods and their respective countries's little trivia</p>
+<h1 class='header1'>Food Trivia</h1>
+<p class='paragraph1'>Different foods and their respective countries's little trivia</p>
 
 </body>
 
