Added <div class header>

--- a/mainPlate.html
+++ b/mainPlate.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Plate's off</title>
 <link rel="stylesheet" type="text/css" href="decor.css">
-<title>Plate's off</title>
+
+
 </head>
 <body>
-<h1>This will be the second header</h1>
+  <div class="Header">
+<h1>Plate's off!</h1>
+  </div>
 </body>
 
 </html>
