grammar issue solved
ehehhehe

--- a/mainPlate.html
+++ b/mainPlate.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1 class='header1'>Food Trivia</h1>
-<p class='paragraph1'>Different foods and their respective countries's little trivia</p>
+<p class='paragraph1'>Different foods and their countries's little trivia</p>
 
 </body>
 
