--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='header1'>Food Trivia</h1>
 <p class='paragraph1'>Different foods and their countries's little trivia</p>
-<p id=blue> Hey</p>
+<p id=blue> Wassup </p>
 </body>
 
 </html>
