--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="decor.css">
-<title>Plate's off</title>
+<title>Plate's Off</title>
 </head>
 <body>
 <h1 class='header1'>Food Trivia</h1>
 <p class='paragraph1'>Different foods and their countries's little trivia</p>
-<p id='p2'> HELLO </p>
+<p class='paragraph2'> HELLO </p>
 </body>
 
 </html>
