sardine pt dish

--- a/Bootstrap/strategy/index.html
+++ b/Bootstrap/strategy/index.html
@@ -106,12 +106,12 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <a class="project animsition-link" href="work-single.html">
               <figure>
-                <img src="images/img_4.jpg" alt="Free Template" class="img-fluid">
+                <img src="https://c1.momondo.net/cms/prod/sites/42/2014/07/06110222/Sardinhas-grelhadas-caem-sempre-bem.-Se-for-durante-o-ver%C3%A3o-e-durante-os-Santos-Populares-melhor-ainda..jpg" alt="Free Template" class="img-fluid">
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
-                  <h2>H20 Water Bottle</h2>
-                  <span>View Case Study</span>
+                  <h2>Sardinhas Assadas</h2>
+                  <span>Fresh charcoal grilled sardines are a very typical dish in Lisbon, Portugal.</span>
                 </div>
               </div>
             </a>
@@ -219,7 +219,7 @@
     <section class="templateux-section mb-5">
       <div class="container">
         <div class="row justify-content-center">
-          
+
 
     </section>
 
