change h2 to paella and trivial

--- a/Bootstrap/strategy/index.html
+++ b/Bootstrap/strategy/index.html
@@ -67,8 +67,8 @@
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
-                  <h2>Canvas Tote Bag</h2>
-                  <span>View Case Study</span>
+                  <h2>Paella</h2>
+                  <span>View trivial</span>
                 </div>
               </div>
             </a>
