--- a/Bootstrap/strategy/index.html
+++ b/Bootstrap/strategy/index.html
@@ -141,13 +141,13 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-4" data-aos="fade-up">
-            <h2 class="section-heading mt-3">What We Do</h2>
+            <h2 class="section-heading mt-3">Back to the roots</h2>
           </div>
           <div class="col-md-8" data-aos="fade-up" data-aos-delay="100">
 
             <div class="row">
               <div class="col-md-12">
-                <h2 class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</h2>
+                <h2 class="mb-5">The countries behind the plates:</h2>
               </div>
             </div>
 
@@ -156,7 +156,7 @@
 
               <div class="col-lg-6">
                 <div class="media templateux-media mb-4">
-              
+
                   <div class="media-body">
                     <h3 class="h5">Web Development</h3>
                     <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
