--- a/Bootstrap/strategy/index.html
+++ b/Bootstrap/strategy/index.html
@@ -76,7 +76,7 @@
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
             <a class="project animsition-link" href="work-single.html">
               <figure>
-                <img src="images/mainasianfood.jpg" alt="Free Template" class="img-fluid">
+                <img src="https://img.taste.com.au/vbT8-7VW/taste/2016/11/singapore-noodles-56224-1.jpeg" alt="Free Template" class="img-fluid">
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
@@ -156,7 +156,7 @@
 
               <div class="col-lg-6">
                 <div class="media templateux-media mb-4">
-              
+
                   <div class="media-body">
                     <h3 class="h5">Web Development</h3>
                     <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
