--- a/Bootstrap/strategy/index.html
+++ b/Bootstrap/strategy/index.html
@@ -158,8 +158,8 @@
                 <div class="media templateux-media mb-4">
 
                   <div class="media-body">
-                    <h3 class="h5">Web Development</h3>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <h3 class="h5">Spain</h3>
+                    <p>Spain description.</p>
                   </div>
                 </div>
               </div>
@@ -168,8 +168,8 @@
                 <div class="media templateux-media mb-4">
 
                   <div class="media-body">
-                    <h3 class="h5">Brand identity</h3>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <h3 class="h5">Singapure</h3>
+                    <p> description of sing....</p>
                   </div>
                 </div>
               </div>
@@ -181,8 +181,8 @@
                 <div class="media templateux-media mb-4">
 
                   <div class="media-body">
-                    <h3 class="h5">Copywriting</h3>
-                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                    <h3 class="h5">Portugal</h3>
+                    <p>Description</p>
                   </div>
                 </div>
               </div>
