--- a/Bootstrap/strategy/contact.html
+++ b/Bootstrap/strategy/contact.html
@@ -36,7 +36,7 @@
 
                 <li><a href="about.html" class="animsition-link">About</a></li>
 
-                <li class="active"><a href="contact.html" class="animsition-link">Contact</a></li>
+                <li class="active"><a href="contact.html" class="animsition-link">Where</a></li>
               </ul>
             </nav>
           </div>
@@ -51,8 +51,8 @@
       <div class="container">
         <div class="row align-items-center justify-content-center intro">
           <div class="col-md-10" data-aos="fade-up">
-            <h1>Get in touch</h1>
-            <p class="lead">Have an amazing idea you would like to work with us on? Let us know using the form below</p>
+            <h1>Where?</h1>
+            <p class="lead">Use the map below and search the respective country!</p>
             <a href="#next" class="go-down js-smoothscroll"></a>
           </div>
         </div>
@@ -117,7 +117,7 @@
           <div class="col-md-6 text-md-right text-center footer-social">
             <a href="#" class="p-3"><span class="icon-facebook2"></span></a>
             <a href="#" class="p-3"><span class="icon-twitter2"></span></a>
-            <a href="#" class="p-3"><span class="icon-dribbble2"></span></a>
+
             <a href="#" class="p-3"><span class="icon-instagram"></span></a>
           </div>
         </div>
