--- a/Bootstrap/strategy/index.html
+++ b/Bootstrap/strategy/index.html
@@ -36,7 +36,7 @@
 
                 <li><a href="about.html" class="animsition-link">About</a></li>
 
-                <li><a href="contact.html" class="animsition-link">Contact</a></li>
+                <li><a href="contact.html" class="animsition-link">Where</a></li>
               </ul>
             </nav>
           </div>
