--- a/Bootstrap/strategy/index.html
+++ b/Bootstrap/strategy/index.html
@@ -67,7 +67,7 @@
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
-                  <h2>Paella</h2>
+                  <h2>Rice</h2>
                   <span>View trivial</span>
                 </div>
               </div>
@@ -80,8 +80,8 @@
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
-                  <h2>Work Hard, Play Hard</h2>
-                  <span>View Case Study</span>
+                  <h2>Noodles</h2>
+                  <span>View trivial</span>
                 </div>
               </div>
             </a>
