--- a/Bootstrap/strategy/index.html
+++ b/Bootstrap/strategy/index.html
@@ -93,7 +93,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up">
             <a class="project animsition-link" href="work-single.html">
               <figure>
-                <img src="images/img_3.jpg" alt="Free Template" class="img-fluid">
+                <img src="images/gazpacho.jpg" alt="Free Template" class="img-fluid">
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
