--- a/Bootstrap/strategy/index.html
+++ b/Bootstrap/strategy/index.html
@@ -119,7 +119,7 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <a class="project animsition-link" href="work-single.html">
               <figure>
-                <img src="images/img_5.jpg" alt="Free Template" class="img-fluid">
+                <img src="images/chickenrice.jpg" alt="Free Template" class="img-fluid">
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
