--- a/Bootstrap/strategy/index.html
+++ b/Bootstrap/strategy/index.html
@@ -182,7 +182,7 @@
 
                   <div class="media-body">
                     <h3 class="h5">Portugal</h3>
-                    <p>Description</p>
+                    <p>Very mediterranean cuisine with a lot of atlantic influences due to the exploration and discoveries era. </p>
                   </div>
                 </div>
               </div>
