--- a/Bootstrap/strategy/index.html
+++ b/Bootstrap/strategy/index.html
@@ -61,7 +61,7 @@
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-6" data-aos="fade-up">
-            <a class="project animsition-link" href="about.html.html">
+            <a class="project animsition-link" href="about.html">
               <figure>
                 <img src="images/paella.jpg" alt="Free Template" class="img-fluid">
               </figure>
@@ -74,7 +74,7 @@
             </a>
           </div>
           <div class="col-md-6" data-aos="fade-up" data-aos-delay="100">
-            <a class="project animsition-link" href="about.html.html">
+            <a class="project animsition-link" href="about.html">
               <figure>
                 <img src="https://img.taste.com.au/vbT8-7VW/taste/2016/11/singapore-noodles-56224-1.jpeg" alt="Free Template" class="img-fluid">
               </figure>
@@ -117,7 +117,7 @@
             </a>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-            <a class="project animsition-link" href="about.html.html">
+            <a class="project animsition-link" href="about.html">
               <figure>
                 <img src="images/chickenrice.jpg" alt="Free Template" class="img-fluid">
               </figure>
