added gazpacho description

--- a/Bootstrap/strategy/index.html
+++ b/Bootstrap/strategy/index.html
@@ -97,8 +97,8 @@
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
-                  <h2>Moon High Res</h2>
-                  <span>View Case Study</span>
+                  <h2>Gazpacho</h2>
+                  <span> Cold soup made of raw, blended vegetables. </span>
                 </div>
               </div>
             </a>
