change desp chicken rice

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
-                  <h2>Creatsy Mailing Box</h2>
-                  <span>View Case Study</span>
+                  <h2>Chicken rice</h2>
+                  <span>a dish of poached chicken and seasoned rice, served with chili sauce and garnishes</span>
                 </div>
               </div>
             </a>
