--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
-                  <h2>Rice</h2>
-                  <span>View trivial</span>
+                  <h2>paella</h2>
+                  <span> National rice dish. </span>
                 </div>
               </div>
             </a>
@@ -97,8 +97,8 @@
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
-                  <h2>Moon High Res</h2>
-                  <span>View Case Study</span>
+                  <h2>Gazpacho</h2>
+                  <span>Cold soup made of raw, blended vegetables.</span>
                 </div>
               </div>
             </a>
