--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@
     <!-- END templateux-hero -->
 
 
-  
+
         <div class="row templateux-section">
           <div class="col-md-12 clearfix mb-5">
             <h2>Team</h2>
@@ -115,9 +115,9 @@
         <div class="row">
           <div class="col-md-12" data-aos="fade-up">
             <div class="owl-carousel dots-overlap wide-slider">
-              <div class="item"><img src="images/hero_1.jpg" alt="Free Template" class="img-fluid"></div>
-              <div class="item"><img src="images/hero_2.jpg" alt="Free Template" class="img-fluid"></div>
-              <div class="item"><img src="images/hero_3.jpg" alt="Free Template" class="img-fluid"></div>
+              <div class="item"><img src="https://www.codefirstgirls.org.uk/uploads/1/9/8/9/19897181/meg2_orig.jpg" alt="Free Template" class="img-fluid"></div>
+              <div class="item"><img src="https://www.pwc.co.uk/women-in-technology/women-in-tech-discussion-highlights.jpg" alt="Free Template" class="img-fluid"></div>
+              <div class="item"><img src="https://images.unsplash.com/photo-1472393365320-db77a5abbecc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1000&q=80"></div>
             </div>
           </div>
         </div>
