--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
-                  <h2>paella</h2>
+                  <h2>Paella</h2>
                   <span> National rice dish. </span>
                 </div>
               </div>
@@ -80,8 +80,8 @@
               </figure>
               <div class="project-hover">
                 <div class="project-hover-inner">
-                  <h2>Noodles</h2>
-                  <span>View trivial</span>
+                  <h2>Seafood noodles</h2>
+                  <span>Not really a national dish TBH.</span>
                 </div>
               </div>
             </a>
@@ -168,8 +168,8 @@
                 <div class="media templateux-media mb-4">
 
                   <div class="media-body">
-                    <h3 class="h5">Singapure</h3>
-                    <p> description of sing....</p>
+                    <h3 class="h5">Singapore</h3>
+                    <p> mixed cultural society food with Asian and Western influences</p>
                   </div>
                 </div>
               </div>
