changed some words

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         <div class="row align-items-center justify-content-center intro">
           <div class="col-md-10" data-aos="fade-up">
             <h1>About Us</h1>
-            <p class="lead">We are experts, engineers, authors, speakers, artists who creates astounding products for people.</p>
+            <p class="lead">We are students, coders, foodies, who love a good laugh over food.</p>
             <a href="#next" class="go-down js-smoothscroll"></a>
           </div>
         </div>
@@ -64,7 +64,7 @@
 
         <div class="row templateux-section">
           <div class="col-md-12 clearfix mb-5">
-            <h2>Team</h2>
+            <h2>Ingredients</h2>
           </div>
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="block-38 ">
