--- a/about.html
+++ b/about.html
@@ -64,15 +64,15 @@
 
         <div class="row templateux-section">
           <div class="col-md-12 clearfix mb-5">
-            <h2>Ingredients</h2>
+            <h2>Chefs</h2>
           </div>
           <div class="col-md-6 col-lg-4 mb-4">
             <div class="block-38 ">
               <div class="block-38-img">
                 <div class="block-38-header">
                   <img src="images/person_1.jpg" alt="Image placeholder">
-                  <h3 class="block-38-heading">Elizabeth Graham</h3>
-                  <p class="block-38-subheading">CEO, Founder</p>
+                  <h3 class="block-38-heading">Teresa</h3>
+
                 </div>
                 <div class="block-38-body">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio recusandae doloribus ut fugit officia voluptate soluta. </p>
@@ -85,8 +85,8 @@
               <div class="block-38-img">
                 <div class="block-38-header">
                   <img src="images/person_2.jpg" alt="Image placeholder">
-                  <h3 class="block-38-heading">Amanda Gold</h3>
-                  <p class="block-38-subheading">Co-Founder</p>
+                  <h3 class="block-38-heading">Sara</h3>
+
                 </div>
                 <div class="block-38-body">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio recusandae doloribus ut fugit officia voluptate soluta. </p>
@@ -99,8 +99,8 @@
               <div class="block-38-img">
                 <div class="block-38-header">
                   <img src="images/person_3.jpg" alt="Image placeholder">
-                  <h3 class="block-38-heading">Chris Stanworth</h3>
-                  <p class="block-38-subheading">Co-Founder</p>
+                  <h3 class="block-38-heading">Jaslinr</h3>
+
                 </div>
                 <div class="block-38-body">
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio recusandae doloribus ut fugit officia voluptate soluta. </p>
