--- a/about.html
+++ b/about.html
@@ -70,12 +70,12 @@
             <div class="block-38 ">
               <div class="block-38-img">
                 <div class="block-38-header">
-                  <img src="images/person_1.jpg" alt="Image placeholder">
+                  <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t1.0-9/38472430_2251840251498959_3114855105061453824_o.jpg?_nc_cat=108&_nc_ht=scontent-lhr3-1.xx&oh=c2731c1755a441f7541a7898b3de56a3&oe=5D495C40" alt="Image placeholder">
                   <h3 class="block-38-heading">Teresa</h3>
 
                 </div>
                 <div class="block-38-body">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio recusandae doloribus ut fugit officia voluptate soluta. </p>
+                  <p>A Portuguese Climber with a secret passion for tech who recently started learning to code with #CodeFirstGirls . </p>
                 </div>
               </div>
             </div>
