I FINISHED MY PART, FINISH YOURS PLS

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         <div class="row align-items-center justify-content-center intro">
           <div class="col-md-10" data-aos="fade-up">
             <h1>About Us</h1>
-            <p class="lead">We are students, coders, foodies, who love a good laugh over food.</p>
+            <p class="lead">We are students, coders and most importantly foodies, who love a good laugh over food.</p>
             <a href="#next" class="go-down js-smoothscroll"></a>
           </div>
         </div>
