--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
         <div class="row align-items-center justify-content-center intro">
           <div class="col-md-10" data-aos="fade-up">
             <h1>Where?</h1>
-            <p class="lead">Use the map below and search the respective country!</p>
+            <p class="lead">Use the map below and try to uncover the way!</p>
             <a href="#next" class="go-down js-smoothscroll"></a>
           </div>
         </div>
@@ -64,7 +64,7 @@
     <section class="templateux-portfolio-overlap mb-5" data-aos="fade-up" id="next">
       <div class="container">
         <!-- <div class="row"> -->
-          
+
         <!-- </div> -->
       </div>
     </section>
