--- a/about.html
+++ b/about.html
@@ -84,12 +84,12 @@
             <div class="block-38 ">
               <div class="block-38-img">
                 <div class="block-38-header">
-                  <img src="images/person_2.jpg" alt="Image placeholder">
+                  <img src="images/Sarapic.jpg" alt="Image placeholder">
                   <h3 class="block-38-heading">Sara</h3>
 
                 </div>
                 <div class="block-38-body">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio recusandae doloribus ut fugit officia voluptate soluta. </p>
+                  <p> The Spaniard. </p>
                 </div>
               </div>
             </div>
