deleted unnecessary images from files
Dont worry nothing changed in the website

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 
     <!-- END templateux-navbar -->
     <section class="templateux-hero overlay"  data-scrollax-parent="true">
-      <div class="cover" data-scrollax="properties: { translateY: '30%' }"><img src="images/hero_2.jpg" /></div>
+      <div class="cover" data-scrollax="properties: { translateY: '30%' }"><img src="images/aboutbanner.jpg" /></div>
 
       <div class="container">
         <div class="row align-items-center justify-content-center intro">
