change some words

--- a/about.html
+++ b/about.html
@@ -98,12 +98,12 @@
             <div class="block-38 ">
               <div class="block-38-img">
                 <div class="block-38-header">
-                  <img src="images/person_3.jpg" alt="Image placeholder">
-                  <h3 class="block-38-heading">Jaslinr</h3>
+                  <img src="images/Jaslinepic.jpg" alt="Image placeholder">
+                  <h3 class="block-38-heading">Jasline</h3>
 
                 </div>
                 <div class="block-38-body">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae aut minima nihil sit distinctio recusandae doloribus ut fugit officia voluptate soluta. </p>
+                  <p>The Singaporean. </p>
                 </div>
               </div>
             </div>
