--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
                   <div class="media-body">
                     <h3 class="h5">Singapore</h3>
-                    <p> mixed cultural society food with Asian and Western influences</p>
+                    <p> Mixed-cultural society food with Eastern and Western influences</p>
                   </div>
                 </div>
               </div>
