--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>The Plate's Off</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/aos.min.css">
-    <link rel="stylesheet" href="css/hamburgers/hamburgers.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="fonts/icomoon/style.css">
-    <link rel="stylesheet" href="css/animsition.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>The Plate's Off</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/aos.min.css">
+  <link rel="stylesheet" href="css/hamburgers/hamburgers.min.css">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="fonts/icomoon/style.css">
+  <link rel="stylesheet" href="css/animsition.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
 
   <div class="js-animsition animsition" data-animsition-in-class="fade-in" data-animsition-out-class="fade-out">
 
     <header class="templateux-navbar" data-aos="fade-down">
       <div class="container-fluid">
         <div class="row">
-          <div class="col-sm-3 col-3"><div class="site-logo"><a href="index.html" class="animsition-link">The Plate's Off</a></div></div>
+          <div class="col-sm-3 col-3">
+            <div class="site-logo"><a href="index.html" class="animsition-link">The Plate's Off</a></div>
+          </div>
           <div class="col-sm-9 col-9 text-right">
 
             <button class="hamburger hamburger--spin toggle-menu ml-auto js-toggle-menu" type="button">
@@ -194,48 +198,50 @@
               <div class="col-lg-6">
 
 
-                </div>
-
               </div>
+
             </div>
-            <!-- END row -->
-
-
           </div>
+          <!-- END row -->
+
+
         </div>
       </div>
-    </section>
-    <!-- END section -->
+  </div>
+  </section>
+  <!-- END section -->
 
-    <!-- END section -->
-    <section class="templateux-section mb-5">
-      <div class="container">
-        <div class="row justify-content-center">
+  <!-- END section -->
+  <section class="templateux-section mb-5">
+    <div class="container">
+      <div class="row justify-content-center">
 
 
-    </section>
+  </section>
 
-    <!-- END call to action -->
+  <!-- END call to action -->
 
-    <footer class="templateux-footer">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-6 text-md-left text-center">
-            <p>
+  <footer class="templateux-footer">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-6 text-md-left text-center">
+          <p>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
+            Copyright &copy;<script>
+              document.write(new Date().getFullYear());
+            </script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </p>
-          </div>
-          <div class="col-md-6 text-md-right text-center footer-social">
-            <a href="#" class="p-3"><span class="icon-facebook2"></span></a>
-            <a href="#" class="p-3"><span class="icon-twitter2"></span></a>
+        </div>
+        <div class="col-md-6 text-md-right text-center footer-social">
+          <a href="#" class="p-3"><span class="icon-facebook2"></span></a>
+          <a href="#" class="p-3"><span class="icon-twitter2"></span></a>
 
-            <a href="#" class="p-3"><span class="icon-instagram"></span></a>
-          </div>
+          <a href="#" class="p-3"><span class="icon-instagram"></span></a>
         </div>
       </div>
-    </footer>
+    </div>
+  </footer>
 
   </div>
 
@@ -243,5 +249,6 @@
   <script src="js/scripts-all.js"></script>
   <script src="js/main.js"></script>
 
-  </body>
+</body>
+
 </html>
