--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,9 @@
       </div>
     </section>
 
-    <section id="map"></section>
+    <section id="map">
+       <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1mIysVYagzWwq5XHSxmKnTJiwefZpXnbn" width="640" height="480"></iframe>
+</section>
 
     <footer class="templateux-footer">
       <div class="container-fluid">
@@ -96,8 +98,6 @@
 
   <script src="js/scripts-all.js"></script>
   <script src="js/main.js"></script>
-
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
   <script src="js/google-map.js"></script>
 
   </body>
