--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
     </section>
 
     <section id="map">
-       <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1mIysVYagzWwq5XHSxmKnTJiwefZpXnbn" width="640" height="480"></iframe>
+       <iframe class="map" src="https://www.google.com/maps/d/u/0/embed?mid=1mIysVYagzWwq5XHSxmKnTJiwefZpXnbn" ></iframe>
 </section>
 
     <footer class="templateux-footer">
