--- a/about.html
+++ b/about.html
@@ -140,10 +140,8 @@
           </p>
           </div>
           <div class="col-md-6 text-md-right text-center footer-social">
-            <a href="#" class="p-3"><span class="icon-facebook2"></span></a>
-            <a href="#" class="p-3"><span class="icon-twitter2"></span></a>
-
-            <a href="#" class="p-3"><span class="icon-instagram"></span></a>
+            <a href="https://www.codefirstgirls.org.uk/" class="p-3"><span class="icon-facebook2"></span></a>
+            <a href="https://twitter.com/CodeFirstGirls?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="p-3"><span class="icon-twitter2"></span></a>
           </div>
         </div>
       </div>
