--- a/about.html
+++ b/about.html
@@ -145,12 +145,13 @@
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </p>
         </div>
-        <a href="https://www.codefirstgirls.org.uk/" class="p-3"><span class="fa">&#xf0c0;</span></a>
-        <a href="https://twitter.com/CodeFirstGirls?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="p-3"><span class="icon-twitter2"></span></a>
+        <div class="col-md-6 text-md-right text-center footer-social">
+          <a href="https://www.codefirstgirls.org.uk/" class="p-3"><span class="fa">&#xf0c0;</span></a>
+          <a href="https://twitter.com/CodeFirstGirls?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" class="p-3"><span class="icon-twitter2"></span></a>
 
-        <a href="https://www.instagram.com/codefirstgirls/" class="p-3"><span class="fa fa-instagram"></span></a>
+          <a href="https://www.instagram.com/codefirstgirls/" class="p-3"><span class="fa fa-instagram"></span></a>
+        </div>
       </div>
-    </div>
     </div>
     </div>
   </footer>
